@@ -2,6 +2,9 @@
 Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp and com.tightdb.internal.Util.java
       when the JNI interface is changed.
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+06-November-2013:
+================
++ Added getSourceRow() method on TableView
 
 25-October-2013:
 ================
